Added table and fixed css

--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
 body {
     
     background-image: url(imgs/background.jpg);
-    
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    
     color: white;
     font-family: 'Merriweather Sans', sans-serif;
+	font-weight: 200;
     text-align: center;
     
 }
@@ -20,7 +19,7 @@ h1 {
     font-family: 'Calistoga', monospace;
     font-size: 500%;
     margin-bottom: 1%;
-    background-color: rgba(0, 0, 0, .5); /* blur background. apply to all text
+    background-color: rgba(0, 0, 0, .5); /* blur background. apply to all text */
 }
 
 h2 {
@@ -63,4 +62,36 @@ img {
     border: none;
     width: 90%;
     max-width: 400px;
+}
+
+.booktable {
+	border:none;
+	border-collapse:collapse;
+	border-spacing:0;
+	background-color: #1B2027;
+	width:100%;
+	margin:5px auto
+}
+
+.booktable td {
+	border-style:solid;
+	border-width:0px;
+	font-family:inherit;
+	font-size:inherit;
+	overflow:hidden;
+	padding:10px 5px;
+	word-break:normal;
+	text-align:center;
+}
+
+.booktable tr {
+	border-color:inherit;
+	text-align:center;
+	vertical-align:top;
+}
+
+.booktable img {
+	border: none;
+    margin-bottom: initial;
+    width: initial;
 }
